XO_Project_UAT/Project--XOGrp--UAT/src/objects/NVMStatsSF__NVM_Call_Summary__c.object
<CustomObject>
    <fields>
        <fullName>NVMStatsSF__Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Case this call relates to (as indicated by a Task record whose CallObject matches the GUID from this summary)</inlineHelpText>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>NVM Call Summaries</relationshipLabel>
        <relationshipName>NVM_Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Contact this call relates to (as indicated by a Task record whose CallObject matches the GUID from this summary)</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NVM Call Summaries</relationshipLabel>
        <relationshipName>NVM_Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Related_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Lead this call relates to (as indicated by a Task record whose CallObject matches the GUID from this summary)</inlineHelpText>
        <label>Related Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>NVM Call Summaries</relationshipLabel>
        <relationshipName>NVM_Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Opportunity this call relates to (as indicated by a Task record whose CallObject matches the GUID from this summary)</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Call Summaries</relationshipLabel>
        <relationshipName>NVM_Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Related_To__c</fullName>
        <formula>IF(NOT(ISBLANK(NVMStatsSF__Related_Account__c)),NVMStatsSF__Related_Account__r.Name, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Case__c)),NVMStatsSF__Related_Case__r.Account.Name, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Opportunity__c)),NVMStatsSF__Related_Opportunity__r.Account.Name, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Contact__r.Account.Name)),NVMStatsSF__Related_Contact__r.Account.Name, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Contact__c)), NVMStatsSF__Related_Contact__r.FirstName + &quot; &quot; + NVMStatsSF__Related_Contact__r.LastName, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Lead__c)), NVMStatsSF__Related_Lead__r.FirstName + &quot; &quot; + NVMStatsSF__Related_Lead__r.LastName,

&quot;-&quot;))))))</formula>
        <inlineHelpText>The Name of the Account if we know it from the Account, Case, Opportunity or Contact, otherwise the Contact&apos;s name or the Lead&apos;s name if we know either of those, otherwise &quot;-&quot;</inlineHelpText>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Ring_List__c</fullName>
        <inlineHelpText>Delimited list of Agents and Ring times for each from which we derive number of agents tried and last ring time.</inlineHelpText>
        <label>Ring List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Server__c</fullName>
        <inlineHelpText>The Server/Cloud instance this Summary data was first retrieved from</inlineHelpText>
        <label>Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Short_Abandon__c</fullName>
        <formula>(NVMStatsSF__Abandoned__c = true) &amp;&amp; (NVMStatsSF__Total_Call_Duration__c &lt; 10)  &amp;&amp;  (NVMStatsSF__Agent_Talk_Time__c == 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calls abandoned within 10s where Agent Talk Time is zero</inlineHelpText>
        <label>Short Abandon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Silence_Percent__c</fullName>
        <inlineHelpText>Percentage of recording where there was silence</inlineHelpText>
        <label>Silence Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Skills_List__c</fullName>
        <inlineHelpText>Comma delimited list of Skill Tags applied</inlineHelpText>
        <label>Skills List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__StartRecorded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if a Start Event was seen - this zero-duration event fixes the inbound Call/Case Start Time</inlineHelpText>
        <label>StartRecorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__TaskExists__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if a Salesforce Task exists for this call. ContactWorld injects Tasks for Outbound Calls + Agent answered Inbound ones; support cost to serve analysis. No Task if No Agent involvement</inlineHelpText>
        <label>TaskExists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__TaskID__c</fullName>
        <inlineHelpText>Related Task for this record - use this Id after the Salesforce Hostname as a path to the Task</inlineHelpText>
        <label>TaskID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Task_Link__c</fullName>
        <formula>IF(NVMStatsSF__TaskExists__c, HYPERLINK(NVMStatsSF__TaskID__c, &quot;Open Task&quot; , &quot;_blank&quot;),&quot;&quot;)</formula>
        <inlineHelpText>URL to open a new tab for the relates task if one exists</inlineHelpText>
        <label>Task Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Time_Zone__c</fullName>
        <inlineHelpText>Time Zone this event occurred in from the perspective of the last Agent (or the User who configured the Channel if no Agent worked the Call)</inlineHelpText>
        <label>Time Zone</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Total_Call_Duration__c</fullName>
        <inlineHelpText>Total time elapsed between Call placement and Call disconnected. Excludes Wrap time</inlineHelpText>
        <label>Total Call Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Trace__c</fullName>
        <inlineHelpText>Reserved for diagnostics</inlineHelpText>
        <label>Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__UTC_ISO8601_Week__c</fullName>
        <description>Week number in ISO8601 form of the start of the event in UTC</description>
        <inlineHelpText>Week number in ISO8601 form of the start of the event in UTC</inlineHelpText>
        <label>UTC ISO8601 Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Version__c</fullName>
        <inlineHelpText>Version number of the Package which created this Summary</inlineHelpText>
        <label>Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Warm_Transfer_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total time 2 agents were connected while the Caller was on hold prior to transfers</description>
        <inlineHelpText>Total time 2 agents were connected while the Caller was on hold prior to transfers</inlineHelpText>
        <label>Warm Transfer Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Week_of_Year__c</fullName>
        <formula>TEXT(IF(
CEILING((NVMStatsSF__Date__c  - DATE(YEAR(NVMStatsSF__Date__c), 1, 1) + 1)/7) &gt; 52, 52, CEILING((NVMStatsSF__Date__c - DATE(YEAR(NVMStatsSF__Date__c), 1, 1) + 1)/7)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Simple Week count of the UTC Week number of the event start</inlineHelpText>
        <label>Week of Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Yr_Wk_Day_Hr__c</fullName>
        <description>Text-sortable format E.g. YYYY/08/6-Saturday/00 Use this field to group and sort Calls in reports</description>
        <formula>TEXT(YEAR(NVMStatsSF__Date__c)) + &apos;/&apos; +   RIGHT((&apos;0&apos; + NVMStatsSF__Week_of_Year__c),2) + &apos;/&apos; +  NVMStatsSF__Day_of_Week__c + &apos;/&apos; +  NVMStatsSF__Hour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text-sortable format E.g. YYYY/08/6-Saturday/00 Use this field to group and sort Calls in reports</inlineHelpText>
        <label>Yr/Wk/Day/Hr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__dateAgentId__c</fullName>
        <description>Used as an INDEXED key to find a summary of an agent&apos;s Calls on a given day. You may need to suffix this with Channel if any agents on different NVM clouds have matching Agent IDs.   NB it is NOT unique as many Calls will point to the same agent&apos;s daily summary; it is unique on the agent&apos;s daily summary object</description>
        <externalId>true</externalId>
        <inlineHelpText>Combination field showing today&apos;s date and agent ID. You can use this value in Salesforce Search to find Agent State Summaries</inlineHelpText>
        <label>dateAgentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warm_Transfer_Time_Hours__c</fullName>
        <formula>NVMStatsSF__Warm_Transfer_Time__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warm Transfer Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warm_Transfer_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__Warm_Transfer_Time__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warm Transfer Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>NVM Call Summary</label>
    <listViews>
        <fullName>NVMStatsSF__All</fullName>
        <columns>NAME</columns>
        <columns>NVMStatsSF__NVM_Service_Name__c</columns>
        <columns>NVMStatsSF__CallTime__c</columns>
        <columns>NVMStatsSF__Handle_Time__c</columns>
        <columns>NVMStatsSF__Related_To__c</columns>
        <columns>NVMStatsSF__Task_Link__c</columns>
        <columns>NVMStatsSF__Last_State__c</columns>
        <columns>NVMStatsSF__Abandoned__c</columns>
        <columns>NVMStatsSF__Agent__c</columns>
        <columns>NVMStatsSF__Queue_Name__c</columns>
        <columns>NVMStatsSF__Automation_Segment__c</columns>
        <columns>NVMStatsSF__Queue_Duration__c</columns>
        <columns>NVMStatsSF__Agent_Ring_Duration__c</columns>
        <columns>NVMStatsSF__Consult_Time__c</columns>
        <columns>NVMStatsSF__After_Call_Work_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NVMCS-{0000000000}</displayFormat>
        <label>NVM CS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Call Summaries</pluralLabel>
    <recordTypes>
        <fullName>NVMStatsSF__Case</fullName>
        <active>true</active>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>NVMStatsSF__Inbound_Call</fullName>
        <active>true</active>
        <label>Inbound Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>NVMStatsSF__Internal_Call</fullName>
        <active>true</active>
        <description>Calls between Agents (outbound for one and inbound for the other)</description>
        <label>Internal Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>NVMStatsSF__Outbound_Call</fullName>
        <active>true</active>
        <label>Outbound Call</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>